<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Demo4TBase</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="demo_list">list</string>
    <string name="demo_image">image</string>
    <string name="demo_list_image">list image</string>
    <string name="demo_image_1">网络加载图片方式一：</string>
    <string name="demo_image_2">网络加载图片方式二：</string>
    <string name="demo_clear">clear cache</string>

</resources>
