<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/demo_dimen_10"
    android:paddingRight="@dimen/demo_dimen_10" >

    <Button
        android:id="@+id/btnList"
        android:layout_width="match_parent"
        android:layout_height="@dimen/demo_dimen_48"
        android:gravity="center"
        android:text="@string/demo_list" />
    <Button
        android:id="@+id/btnImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/demo_dimen_48"
        android:gravity="center"
        android:text="@string/demo_image" />
    <Button
        android:id="@+id/btnListImages"
        android:layout_width="match_parent"
        android:layout_height="@dimen/demo_dimen_48"
        android:gravity="center"
        android:text="@string/demo_list_image" />

</LinearLayout>