<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/demo_dimen_10"
    android:paddingRight="@dimen/demo_dimen_10" >

    <Button
        android:id="@+id/btnCache"
        android:layout_width="match_parent"
        android:layout_height="@dimen/demo_dimen_48"
        android:gravity="center"
        android:text="@string/demo_clear" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_image_1" />

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/niv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_image_2" />

    <ImageView
        android:id="@+id/iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>